--- a/Introduction_to_Regular_Expression.ipynb
+++ b/Introduction_to_Regular_Expression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Introduction to Regular Expression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMG7oHE1BUlR3cM2QwlYPQj",
+      "authorship_tag": "ABX9TyOJ8s6B3Tq/5C0dYkVEcdAH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "GHiYLoxV8zGm"
       },
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "P2A6dVIK8_DW"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "HRY8eCOx9H3E"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "MfpFcpd99Qjb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "id": "eaYE0Rug9XRe",
         "outputId": "8c1ce701-9d8c-4edb-ad35-694bd92fece7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "27wBzeIv9Zl3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "id": "UboJQhMt9cDu",
         "outputId": "6a614737-b18a-413d-9603-9ecb0021e646"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "OY0_RhKY9edA"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
         "id": "9YahATsN9i9e",
         "outputId": "c65b0bbc-7465-4964-d865-d8a596eea472"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
         "id": "jyGS2K5T9kOl",
         "outputId": "5a565dfb-7da0-4371-a0c6-dae2348fc8b4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "pan9I_-z9nQh"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,7 +253,7 @@
         "id": "0kzAmtY09vu4",
         "outputId": "728ed25e-88ae-49be-c887-3859958e1e7f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,13 +270,13 @@
         "re.search('ab+c', str5)"
       ],
       "metadata": {
+        "id": "SQXSj23r95Po",
+        "outputId": "675dc6f6-99f4-48cf-9d9b-1825fd90a79c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "SQXSj23r95Po",
-        "outputId": "675dc6f6-99f4-48cf-9d9b-1825fd90a79c"
+        }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,13 +296,13 @@
         "re.search('ab+c', str6)"
       ],
       "metadata": {
+        "id": "QBWnq12L97Mu",
+        "outputId": "7964b0e3-20d9-4558-e350-5faa95ee4d59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "QBWnq12L97Mu",
-        "outputId": "7964b0e3-20d9-4558-e350-5faa95ee4d59"
+        }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,15 +317,18 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# Metacharacters (2)\n",
+        "There are two more metachacters - and  .\n",
+        "\n",
+        "Hyphen (-) : it means the range \n",
+        "\n",
+        "Period (.) : used to find any single character except the new line"
       ],
       "metadata": {
-        "id": "riXHx2-d98cV"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "GCEG14Af_OOC"
+      }
     }
   ]
 }
